--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,12 @@ h1 {
   border-radius: 8px;
 
   padding: 8px 16px;
+
+  padding-top: 0;
+}
+
+#input::selection {
+  background-color: red;
 }
 
 .bnf {
@@ -76,7 +82,7 @@ h1 {
 }
 
 .error {
-  background-color: red;
+  text-decoration: underline red;
 }
 
 #action {
